--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noindex, nofollow">
   </header>
 
-  <body>
+  <body style="background:url(images/43.jpg); background-size:100% 100%;">
     <img src="images/4.jpg" width="75%" alt="Banner">
     <h1>Raj Panchal's Portal</h1>
     <h2>About Me</h2>
