--- a/resume.html
+++ b/resume.html
@@ -11,14 +11,12 @@
     <link rel="shortcut" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="name" content="Raj Panchal's Portal">
-    <meta name="robots" content="noindex, nofollow">
+    
 
   </header>
 
-  <body style="background:url(images/27.jpg); background-size:100% 100%;">
-    <hr>
-
-    
+  <body style="background:url(images/45.jpg); background-size:100% 100%;">
+    <img src="images/46.jpg" width="75%" alt="Banner" class="avatar">
     <h1>Raj Panchal</h1>
     <h4>I am currently pursuing B-Tech in Computer Science From SRM Institue of Science and Technology,Ramapuram</h4>
 
