--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 
     <h2>Professional Experiences</h2>
 
-    <h3>Interships</h3>
+    <h3>Internships</h3>
     <h4>Kaashiv Infotech, Web Development</h4>
     <h5>June 2019</h5>
       <ul>
