--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>I am a Machine learning and Data Science enthusiast.</p>
     <h2>Credentials and Portfolio</h2>
 
-    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/RAJ112000">My Github</a></p>
+    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
     <h2>Contact</h2>
 
     <p>Email: <a href="mailto:roger71011112000@gmail.com">roger71011112000@gmail.com</a></p>
