--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/RAJ112000" target="_blank">https://github.com/RAJ112000</a></h3>
+      <h3>GitHub: <a href="https://github.com/rajpanchal0101" target="_blank">https://github.com/rajpanchal0101</a></h3>
 
     <h2>Education</h2>
 
