--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="name" content="Raj Panchal's Portal">
     <meta name="robots" content="noindex, nofollow">
+    <meta name="google-site-verification" content="I2urjlVoPKcNlV2ogi_plV5dhPzYOm6FSCV2MYpt7aI" />
   </header>
 
   <body style="background:url(images/43.jpg); background-size:100% 100%;">
