--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
     <img src="images/46.jpg" width="75%" alt="Banner" class="avatar">
     <h1>Raj Panchal</h1>
     <h4>I am currently pursuing B-Tech in Computer Science From SRM Institue of Science and Technology,Ramapuram</h4>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="41d5248e-f221-4c34-b947-86c0a6d05cf8" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 
     <p>Email: <a href="mailto:roger71011112000@gmail.com" target="_blank">roger71011112000@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
