--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <img src="images/4.jpg" width="75%" alt="Banner">
     <h1>Raj Panchal's Portal</h1>
     <h2>About Me</h2>
-    <p>I am currently pursuing B-Tech in Computer Science from SRMIST Ramapuram.</p>
-    <p>I am a Machine learning and Data Science enthusiast.</p>
+    <p>I am a fresh CSE graduate from SRM University. I am currently working as an Apprentice in Bank of AmericaI. In addition to that, I also have a good knowledge about DBMS.</p>
+    <p>I am a Machine learning and Data Science enthusiast as well.</p>
     <h2>Credentials and Portfolio</h2>
 
-    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
+    <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
     <h2>Contact</h2>
 
-    <p>Email: <a href="mailto:roger71011112000@gmail.com">roger71011112000@gmail.com</a></p>
+    <p>Email: <a href="mailto:rajpanchal1729@gmail.com">roger71011112000@gmail.com</a></p>
   </body>
 
   <footer>
     <hr>
-    <code>Copyright (c) 2021 Raj Panchal</code>
+    <code>Copyright (c) 2022 Raj Panchal</code>
 
   </footer>
 
