--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
     <h2>Contact</h2>
 
-    <p>Email: <a href="mailto:rajpanchal1729@gmail.com">roger71011112000@gmail.com</a></p>
+    <p>Email: <a href="mailto:rajpanchal1729@gmail.com">rajpanchal1729@gmail.com</a></p>
   </body>
 
   <footer>
