--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <img src="images/4.jpg" width="75%" alt="Banner">
     <h1>Raj Panchal's Portal</h1>
     <h2>About Me</h2>
-    <p>I am a fresh CSE graduate from SRM University. I am currently working as an Apprentice in Bank of America. In addition to that, I also have a good knowledge about DBMS.</p>
-    <p>I am a Machine learning and Data Science enthusiast as well.</p>
+    <p>I am a fresh CSE graduate from SRM University.</p>
+    <p>I am currently working as an Apprentice in Bank of America.</p>
+    <p>I also have a good knowledge about DBMS. In addition to that, I am a Machine learning and Data Science enthusiast as well.</p>
     <h2>Credentials and Portfolio</h2>
 
     <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
