--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h2>About Me</h2>
     <p>I am a fresh CSE graduate from SRM University.</p>
     <p>I am currently working as an Apprentice in Bank of America.</p>
-    <p>I also have a good knowledge about DBMS. In addition to that, I am a Machine learning and Data Science enthusiast as well.</p>
+    <p>I also have a good knowledge about DBMS.</p>
+    <p>In addition to that, I am a Machine learning and Data Science enthusiast as well.</p>
     <h2>Credentials and Portfolio</h2>
 
     <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
