--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <html lang="en">
 
   <header>
-    <title>Raj Panchal's Resume</title>
+    <title>Raj Panchal's Details</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut" href="favicon.ico" type="image/x-icon">
@@ -30,19 +30,21 @@
     <h2>Education</h2>
 
     <h3>SRM University, Ramapuram</h3>
-    <h4>B.Tech Computer Science, GPA 8.4</h4>
+    <h4>B.Tech Computer Science, GPA 8.43</h4>
 
     <h2>Professional Experiences</h2>
+    
+    <h3>Full Time,Apprentice</h3>
+    <h4>Bank of America, Automation</h4>
+    <h5>June 2021</h5>
 
     <h3>Internships</h3>
     <h4>Kaashiv Infotech, Web Development</h4>
     <h5>June 2019</h5>
-      <ul>
-        <li>I am a Machine Learning and Data Science ethusiast.</li>
-      </ul>
+      
       <br>
       <ul>
-        <li>I have published a paper on Heart Disease Prediction in IJEAT.</li>
+        <li>I have also published a paper on Heart Disease Prediction in IJEAT.</li>
 
       </ul>
   </body>
