--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>In addition to that, I am a Machine learning and Data Science enthusiast as well.</p>
     <h2>Credentials and Portfolio</h2>
 
-    <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a></p>
+    <p><a href="https://drive.google.com/file/d/1zltPfuLpGaRb1DQjUTp3LSZCyf81PSuc/view?usp=sharing">My Resume</a> | <a href="https://github.com/rajpanchal0101">My Github</a> | <a href="resume.html">Know More</a></p>
     <h2>Contact</h2>
 
     <p>Email: <a href="mailto:rajpanchal1729@gmail.com">rajpanchal1729@gmail.com</a></p>
