--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,15 @@
   <body style="background:url(images/45.jpg); background-size:100% 100%;">
     <img src="IMG-20191209-WA0008.jpg" width="75%" alt="Banner" class="avatar">
     <h1>Raj Panchal</h1>
-    <h4>I am currently pursuing B-Tech in Computer Science From SRM Institue of Science and Technology,Ramapuram</h4>
+    <h2>My IBM Badges</h4>
     <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="41d5248e-f221-4c34-b947-86c0a6d05cf8" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5556a7a1-42a6-42f3-ac09-bcd8de80ca35" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0a7479ae-12a6-49d2-86d6-7c265356f504" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="b7805772-fb1c-4b0c-b257-c55c9c9d609d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9b7346a8-ca53-46ad-8fcb-98a24c5d2f9a" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="6b626b25-79e3-41f7-9eb1-168b6e0849ec" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
-    <p>Email: <a href="mailto:roger71011112000@gmail.com" target="_blank">roger71011112000@gmail.com</a></p>
+    <p>Email: <a href="mailto:rajpanchal1729@gmail.com" target="_blank">rajpanchal1729@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
