--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 
   </header>
 
-  <body style="background:url(images/45.jpg); background-size:100% 100%;">
+  <body style="background:url(images/IMG-20191209-WA0008.jpg); background-size:100% 100%;">
     <img src="IMG-20191209-WA0008.jpg" width="75%" alt="Banner" class="avatar">
     <h1>Raj Panchal</h1>
     <h2>My IBM Badges</h4>
