--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
   </header>
 
   <body style="background:url(images/45.jpg); background-size:100% 100%;">
-    <img src="50.jpg" width="75%" alt="Banner" class="avatar">
+    <img src="images/IMG-20191209-WA0008.jpg" width="75%" alt="Banner" class="avatar">
     <h1>Raj Panchal</h1>
     <h2>My IBM Badges</h4>
     <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="41d5248e-f221-4c34-b947-86c0a6d05cf8" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
