--- a/CS716-Assignment1/index.html
+++ b/CS716-Assignment1/index.html
@@ -221,7 +221,7 @@
 
     <div class="content">
         <section class="program-description">
-            <h2 class="section-title">Program Overview</h2>
+            <h2 style="font-size: 2rem; color: #154734; margin-bottom: 20px;">Program Overview</h2>
             <p>
                 The Master of Science in Data Science program at the University of Regina offers a comprehensive curriculum designed to prepare students for the dynamic field of data science. With an interdisciplinary approach, the program integrates computer science, statistics, and data engineering, ensuring that graduates are ready to excel in a rapidly evolving industry.
             </p>
