--- a/CS716-Assignment1/index.html
+++ b/CS716-Assignment1/index.html
@@ -206,10 +206,12 @@
 </head>
 
 <body>
-    <header>
-        <img src="icon.PNG" alt="University of Regina Logo">
+    <header style="background-color: white; padding: 20px; text-align: center;">
+        <img src="icon.PNG" alt="University of Regina Logo" style="position: absolute; top: 10px; left: 20px; height: 60px;">
+        <div style="color: #154734;">
         <h1>Master of Science in Data Science</h1>
         <p>Department of Computer Science | University of Regina</p>
+	    </div>
     </header>
 
     <nav>
