--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,232 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raj Panchal - Portfolio</title>
+    <link rel="stylesheet" href="master.css">
+    <!-- Include any additional CSS for interactivity and visual appeal -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <!-- Add Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Add any necessary JavaScript for interactivity -->
+</head>
+<body>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="#summary">Summary</a></li>
+            <li><a href="#skills">Related Skills and Knowledge</a></li>
+            <li><a href="#projects">Projects and Publications</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#experience">Related Work Experience</a></li>
+            <li><a href="#other-experience">Other Work Experience</a></li>
+            <li><a href="#volunteer">Volunteer Experience</a></li>
+            <li><a href="#references">References</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
+    <!-- Header Section -->
+    <header id="home">
+        <h1>RAJ PANCHAL</h1>
+        <p>
+            <i class="fas fa-phone"></i> +1 (306) 351-4308 |
+            <i class="fas fa-envelope"></i> <a href="mailto:rajpanchal1729@gmail.com">rajpanchal1729@gmail.com</a> |
+            <i class="fab fa-linkedin"></i> <a href="https://linkedin.com/rajpanchal010100">linkedin.com/rajpanchal010100</a> |
+            <i class="fab fa-github"></i> <a href="https://github.com/rajpanchal0101">github.com/rajpanchal0101</a>
+        </p>
+        <img src="profile.jpeg" alt="Raj Panchal" class="avatar">
+    </header>
+
+    <!-- Summary Section -->
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>An enthusiastic Computer Science graduate student specializing in Data Science, passionate about leveraging machine learning and predictive modeling to drive innovation. With research experience and a paper published in the IJEAT journal, I am eager to apply my skills in impactful, technology-driven projects across diverse domains.</p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Related Skills and Knowledge</h2>
+        <div class="skills-container">
+            <h3>Technical Skills</h3>
+            <ul>
+                <li>Designed and developed web pages incorporating CRUD operations using HTML5, CSS3, JavaScript, and PHP with database integration using MySQL and WampServer.</li>
+                <li>Implemented and tested machine learning models, utilizing Python, TensorFlow, and PyTorch for predictive analytics and deep learning applications.</li>
+                <li>Engineered and enhanced full-stack applications by integrating React.js for the front end and Node.js with MySQL for the back end, ensuring smooth data flow and user experience.</li>
+                <li>Developed and tested automation scripts for software validation using tools like Selenium, Postman, and Silk Test, ensuring the quality of IT service management systems.</li>
+                <li>Utilized version control systems like Git and GitHub for collaborative software development and project versioning.</li>
+            </ul>
+            <h3>Computer Skills</h3>
+            <ul>
+                <li><strong>Programming Languages:</strong> C, C++, Java, Python, PHP, HTML5, CSS3, C#, JavaScript, TypeScript, SQL, VB</li>
+                <li><strong>Frameworks & Libraries:</strong> React.js, Angular, Vue.js, Django, Flask, Spring Boot, Express.js, Next.js, ASP.NET, .NET Core, Node.js, EDM, WPF</li>
+                <li><strong>Database Management Systems:</strong> MySQL, SQLite, MongoDB, PostgreSQL, MS SQL Server, SSMS</li>
+                <li><strong>DevOps & CI/CD Tools:</strong> Docker, Kubernetes, Jenkins, CircleCI, Terraform, Ansible</li>
+                <li><strong>APIs & Microservices:</strong> REST, GraphQL, gRPC, JWT</li>
+                <li><strong>Data Analysis & Visualization:</strong> Matplotlib, Seaborn, SSRS, Power BI, Microsoft Excel, SSIS</li>
+                <li><strong>Machine Learning & Deep Learning Tools:</strong> Scikit-learn, TensorFlow, PyTorch, Keras, Pandas, NumPy, XGBoost, MXNet</li>
+                <li><strong>Big Data Tools for Data Processing & Distributed Systems:</strong> Apache Spark, Hadoop, Kafka, Elasticsearch</li>
+                <li><strong>Cloud Computing Platforms:</strong> AWS (EC2, S3, Lambda, RDS, SageMaker), Microsoft Azure (Virtual Machines)</li>
+                <li><strong>Software Applications:</strong> Microsoft Office Suite, Power BI, WampServer, Kaggle Notebook, Google Colab, Jupyter Lab, SharePoint</li>
+                <li><strong>Testing & Automation:</strong> Selenium, Cypress, Postman, JUnit, Mocha</li>
+                <li><strong>Agile & Project Management Tools:</strong> Jira, Asana, Agile, Scrum</li>
+            </ul>
+            <h3>General Transferable Skills</h3>
+            <ul>
+                <li><strong>Languages:</strong> English (Full Professional Proficiency), Hindi (Native or Bilingual Proficiency), Gujarati (Native or Bilingual Proficiency), Japanese (Elementary Proficiency)</li>
+                <li><strong>Interpersonal Skills:</strong> Analytical thinking, Cross-functional collaboration, Clear and concise communication, Emotional intelligence and Leadership, Adaptability to dynamic environments, Strategic problem-solving, Time prioritization, Data-driven decision-making, Stakeholder management, Agile project lifecycle management, Research-driven innovation.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Projects and Publications Section -->
+    <section id="projects">
+        <h2>Projects and Publications</h2>
+        <div class="project-item">
+            <h3>A Robust and Scalable Recommendation System</h3>
+            <p><strong>University of Regina (academic), Aug 2024</strong></p>
+            <p>Developed an expandable recommendation system for real-time, large-scale predictions (Technologies Used: AWS SageMaker, MXNet, Gluon).</p>
+        </div>
+        <div class="project-item">
+            <h3>Insights into Celebrity Recognition: A Comparative Study</h3>
+            <p><strong>University of Regina (academic), Mar 2024</strong></p>
+            <p>Designed an image classification model, achieving 95.97% accuracy in celebrity recognition, outperforming AWS Rekognition (Technologies Used: VGG-16, SVM).</p>
+        </div>
+        <div class="project-item">
+            <h3>EventSphere: A Streamlined Campus Event Management System</h3>
+            <p><strong>SRM Institute Of Science & Technology (academic, research), Sep 2021 (Independent Project)</strong></p>
+            <p>Architected and implemented a comprehensive platform for efficient campus event planning, registration, and ticket booking, prioritizing user experience and modern design principles (Technologies Used: MERN Stack, JWT, QR Code).</p>
+        </div>
+        <div class="project-item">
+            <h3>An Automatic System for Heart Disease Prediction using Perceptron Model and Gradient Descent Algorithm</h3>
+            <p><strong>SRM Institute Of Science & Technology (academic, research), Oct 2019</strong></p>
+            <p>Implemented a Deep Learning model to predict the likelihood of heart disease, improving early diagnosis through accurate predictions and published it in International Journal of Engineering and Advanced Technology on Oct 19, 2019 (Technologies Used: Perceptron, Gradient Descent).</p>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <h2>Education</h2>
+        <div class="education-item">
+            <h3>Master of Science in Computer Science (Data Science)</h3>
+            <p><strong>University of Regina, Sep 2023 - Present (Expected in Dec 2025)</strong></p>
+            <p>Regina, SK, Canada</p>
+        </div>
+        <div class="education-item">
+            <h3>Bachelor of Technology in Computer Science Engineering</h3>
+            <p><strong>SRM Institute Of Science & Technology (Deemed University), Jul 2017 - Jun 2021</strong></p>
+            <p>Chennai, Tamil Nadu, India</p>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li>Data Science Methodology (Authorized by IBM), Aug 2020</li>
+            <li>Tools for Data Science (Authorized by IBM), Aug 2020</li>
+            <li>Python for Data Science, AI & Development (Authorized by IBM), Dec 2020</li>
+            <li>Machine Learning Foundations: A Case Study Approach (Authorized by University of Washington), Jun 2020</li>
+            <li>Databases and SQL for Data Science with Python (Authorized by IBM), Jan 2021</li>
+            <li>Data Analysis with Python (Authorized by IBM), Jul 2021</li>
+            <li>AWS Fundamentals: Going Cloud-Native (Authorized by Amazon Web Services), Jun 2020</li>
+            <li>Database Management System (Authorized by NPTEL / IIT Kharagpur), Mar 2020</li>
+        </ul>
+    </section>
+
+    <!-- Related Work Experience Section -->
+    <section id="experience">
+        <h2>Related Work Experience</h2>
+        <div class="experience-item">
+            <h3>Teaching Assistant & Marker</h3>
+            <p><strong>University of Regina, Sep 2024 - Present</strong></p>
+            <p>Regina, Saskatchewan, Canada</p>
+            <ul>
+                <li>Grade assignments and provide constructive feedback to students on ways to improve.</li>
+                <li>Proctor tests and exams, staying vigilant for potential cheating and reporting suspected academic integrity issues to the course instructor.</li>
+                <li>Assist professors with lesson planning and student evaluations, while providing individualized support to students who need additional help in understanding concepts or completing assignments.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Quality Specialist 1 B</h3>
+            <p><strong>Bank of America, Jun 2021 - Aug 2023</strong></p>
+            <p>GIFT City, Gandhinagar, Gujarat, India</p>
+            <ul>
+                <li>Responsible for the automation and regression needed to validate various end-to-end functionalities in IT Service Management using Selenium, Postman and Silk Test.</li>
+                <li>Calculated monthly gross and project utilization along with its visual representations, such as bar graphs, for timesheet metrics.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Full Stack Developer Intern</h3>
+            <p><strong>Kaashiv Infotech, Jun 2019 - Aug 2019</strong></p>
+            <p>Chennai, Tamil Nadu, India</p>
+            <ul>
+                <li>Built and maintained web applications utilizing React.js for client-side development and Node.js for server-side logic.</li>
+                <li>Developed RESTful APIs for data retrieval and manipulation, integrating MySQL as the database solution to enhance application performance.</li>
+                <li>Conducted thorough testing and debugging of applications to ensure high-quality deliverables.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Other Work Experience Section -->
+    <section id="other-experience">
+        <h2>Other Work Experience</h2>
+        <div class="experience-item">
+            <h3>Personal Shopper</h3>
+            <p><strong>Real Canadian Superstore (Loblaw Companies Limited), Sep 2023 - Present</strong></p>
+            <p>Regina, Saskatchewan, Canada</p>
+        </div>
+    </section>
+
+    <!-- Volunteer Experience Section -->
+    <section id="volunteer">
+        <h2>Volunteer Experience</h2>
+        <ul>
+            <li><strong>Event Day Volunteer, CIBC Run for the Cure, Canadian Cancer Society</strong> (Oct 2024 – Regina, SK, Canada): Support event operations for the CIBC Run for the Cure, including setup, tear down, and participant coordination.</li>
+            <li><strong>Ticket Distributor & Event Organizer, Nexus, SRM Institute of Science & Technology</strong> (Mar 2018 – Chennai, Tamil Nadu, India): Coordinated event logistics and distributed tickets for Nexus, a campus-wide event, ensuring smooth operations and participant management.</li>
+        </ul>
+    </section>
+
+    <!-- References Section -->
+    <section id="references">
+        <h2>References</h2>
+        <div class="reference-item">
+            <h3>Dr. Nashid Shahriar</h3>
+            <p>Assistant Professor (Ph.D)</p>
+            <p>University of Regina</p>
+            <p>Email: <a href="mailto:Nashid.Shahriar@uregina.ca">Nashid.Shahriar@uregina.ca</a></p>
+        </div>
+        <div class="reference-item">
+            <h3>Dr. Lisa Fan</h3>
+            <p>Associate Professor (Ph.D)</p>
+            <p>University of Regina</p>
+            <p>Email: <a href="mailto:Lisa.Fan@uregina.ca">Lisa.Fan@uregina.ca</a></p>
+        </div>
+        <div class="reference-item">
+            <h3>Dr. Farial Syed</h3>
+            <p>Assistant Professor (Ph.D)</p>
+            <p>University of Regina</p>
+            <p>Email: <a href="mailto:syed200f@uregina.ca">syed200f@uregina.ca</a></p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:rajpanchal1729@gmail.com">rajpanchal1729@gmail.com</a></p>
+        <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/rajpanchal010100">linkedin.com/rajpanchal010100</a></p>
+        <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/rajpanchal0101">github.com/rajpanchal0101</a></p>
+        <p><i class="fas fa-phone"></i> Phone: +1 (306) 351-4308</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Raj Panchal</p>
+    </footer>
+
+    <!-- Include any additional JavaScript files -->
+    <script src="script.js"></script>
+</body>
+</html>
